# parajudica

./: .gitignore  .gitmodules  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-DATA  Makefile  README.md  RELEASING.md  mise.toml  pyproject.toml
.github/workflows/: deploy-site.yml  publish.yml
benchmark/: generate.py  results.csv  run_benchmark.py
examples/challenges/challenge1/: README.md  validate.rq
examples/challenges/challenge2/: README.md  validate-all.rq  validate.rq
examples/challenges/challenge3/: README.md  env-no-join.ttl  validate.rq
examples/challenges/challenge4/: control-status.rq  validate.rq
examples/challenges/challenge5/: framework-divergence.rq  validate.rq
examples/db/: env.ttl
examples/db/employee/: providers-info.ttl
examples/db/medical/: patient-encounters.ttl  patient-info.ttl  patient-treatments.ttl
examples/db/research/: aggregated-health-k12.ttl  aggregated-health-k5.ttl  aggregated-health.ttl
examples/frameworks/: README.md
examples/frameworks/base/: framework.toml
examples/frameworks/base/constructs/: qi-signatures.rq
examples/frameworks/base/model/: base.ttl
examples/frameworks/base/updates/: k-anon-cached.rq
examples/frameworks/ema/: framework.toml
examples/frameworks/ema/model/: ema.ttl
examples/frameworks/gdpr/: framework.toml
examples/frameworks/gdpr/model/: gdpr.ttl
examples/frameworks/hipaa/: framework.toml
examples/frameworks/hipaa/model/: hipaa.ttl
examples/frameworks/italy/: framework.toml
examples/frameworks/italy/model/: italy.ttl
inference/metamodel/pj/: framework.toml  pj.ttl
inference/metamodel/pj/constructs/assertions/: index-label-scope.rq
inference/metamodel/pj/constructs/conditional/: evaluate.rq
inference/metamodel/pj/constructs/conditions/: comparison.rq  contains.rq  index-parameters.rq  joinable.rq
inference/metamodel/pj/constructs/containment/: direct.rq  from-fields.rq  propagate.rq
inference/metamodel/pj/constructs/equivalence/: expand.rq
inference/metamodel/pj/constructs/implications/: evaluate-from-all.rq  evaluate-single.rq  evaluate-unconditional.rq  expand-from-labels.rq  expand-to-labels.rq  expand-unconditional-from-labels.rq
inference/metamodel/pj/constructs/propagation/: expand-facet-rules.rq  inward.rq  joinable.rq  outward.rq  peer.rq
inference/metamodel/pj/constructs/subclass/: expand-from-labels.rq  subclass.rq
inference/metamodel/pj/constructs/tags/: materialize.rq
inference/metamodel/pj/rules/: availability.rules  inheritance.rules  parent-framework.rules  tags.rules  utilities.rules
inference/metamodel/sdc/: field-declarations.rq  pj-mapping.rules  sdc.ttl
inference/src/inference/: __init__.py  cache.py  cli.py  engine.py  jena_compiler.py  skolemizer.py
paper/: Makefile  main.tex  refs.bib
paper/diagrams/: architecture.mmd  scenario.mmd
sandbox/: deno.json
sandbox/apps/api/: deno.json
sandbox/apps/api/src/: main.ts
sandbox/apps/web/: deno.json  index.html  package.json  vite.config.ts
sandbox/apps/web/src/: App.svelte
scripts/: release.sh
site/: build-ontology.sh  content.md  index.html  ontology.dot  prism.min.js  publish-vocab.py  style.css
src/parajudica/: __init__.py  cli.py  compile.py  engine.py  jena_compiler.py  oxigraph_runner.py
src/parajudica/metamodel/pj/: framework.toml  pj.ttl
src/parajudica/metamodel/sdc/: field-declarations.rq  framework.toml  pj-mapping.rules  sdc.ttl
(+50 files in other folders)
