[build-system]
requires = ["uv_build>=0.8.14,<0.10.0"]
build-backend = "uv_build"

[project]
name = "parajudica"
version = "0.1.0"
description = "RDF-based reasoner and metamodel for multi-framework, context-dependent data compliance assessments"
readme = "README.md"
requires-python = ">=3.13"
# The Python code is Apache-2.0; the packaged metamodel ontologies under
# src/parajudica/metamodel/ are CC-BY-4.0. See LICENSE and LICENSE-DATA.
license = "Apache-2.0 AND CC-BY-4.0"
license-files = ["LICENSE", "LICENSE-DATA"]
authors = [
    { name = "Luc Moreau" },
    { name = "Alfred Rossi", email = "alfredr@gmail.com" },
    { name = "Sophie Stalla-Bourdillon" },
]
keywords = [
    "RDF",
    "SPARQL",
    "compliance",
    "GDPR",
    "HIPAA",
    "data governance",
    "semantic web",
    "reasoner",
    "ontology",
    "privacy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "rdflib>=6.0.0",
    "networkx>=3.0",
    "pyoxigraph>=0.4.0",
    "rich>=14.1.0",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://parajudica.org/"
Repository = "https://github.com/alfredr/parajudica"
Paper = "https://doi.org/10.5281/zenodo.17825089"

[project.scripts]
parajudica = "parajudica.cli:main"
privacy-inference = "parajudica.cli:main"

[tool.uv.build-backend]
module-name = "parajudica"
module-root = "src"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.1a19",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "SIM"]
ignore = ["E501", "B008", "C901", "SIM108"]

[tool.ty.environment]
root = ["src"]
python-version = "3.13"
extra-paths = [".venv/lib/python3.13/site-packages"]
